<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_f"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/sign" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView_f"
            android:layout_toRightOf="@+id/imageView_f"
            android:maxLines="20"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/f_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView_f"
            android:layout_toEndOf="@+id/imageView_f"
            android:layout_toRightOf="@+id/imageView_f"
            android:text="@string/date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/f_date"
            android:layout_alignBottom="@+id/f_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/author"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/f_date"
            android:layout_toEndOf="@+id/imageView_f"
            android:layout_toRightOf="@+id/imageView_f"
            android:maxLines="1"
            android:text="@string/url"
            android:textColor="@android:color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/background_dark" />
    </RelativeLayout>
</LinearLayout>
